--- a/UnitTest/TestApp/CMakeLists.txt
+++ b/UnitTest/TestApp/CMakeLists.txt
@@ -1,11 +1,24 @@
 include_directories(
+	${SKYLICHT_ENGINE_SOURCE_DIR}/UnitTest/TestApp
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Template/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Irrlicht/Include
+	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Spark/include
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/System/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Engine/Source
-	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Client/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Components/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Client/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Lightmapper/Source
+	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Audio/Source
+	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Physics/Source
 )
+
+if (BUILD_FREETYPE)
+	include_directories(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/ThirdParty/source/freetype2/include)
+endif()
+
+if (BUILD_IMGUI)
+	include_directories(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Imgui/Source)
+endif()
 
 file(GLOB_RECURSE test_app_source 
 	./**.cpp
