--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,6 +119,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build
       run: |
+        brew install libomp
         cd Assets
         python BuildAssetBundles.py
         cd ..
