--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,21 +157,30 @@ if (MINGW)
 	add_definitions(-DMINGW)
 endif()
 
-if (USE_OPENMP)
-	add_definitions(-DUSE_OPENMP)
-	
+if (USE_OPENMP)		
 	if (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
 		# AppleClang
-		set(CMAKE_C_FLAGS "-Xpreprocessor -fopenmp -lomp -L/usr/local/opt/libomp/lib -I/usr/local/opt/libomp/include ${CMAKE_C_FLAGS}")
-		set(CMAKE_CXX_FLAGS "-Xpreprocessor -fopenmp -lomp -L/usr/local/opt/libomp/lib -I/usr/local/opt/libomp/include ${CMAKE_CXX_FLAGS}")
+		find_package(OpenMP REQUIRED)
+		if (OPENMP_FOUND)
+			include_directories("${OPENMP_INCLUDES}")
+			link_directories("${OPENMP_LIBRARIES}")
+			set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+			set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+			# set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+			add_definitions(-DUSE_OPENMP)
+		else()
+			message(STATUS "! OpenMP library not found! $>brew install libomp")
+		endif()
 	elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 		# using Visual Studio C++
 		set(CMAKE_C_FLAGS "/openmp ${CMAKE_C_FLAGS}")
 		set(CMAKE_CXX_FLAGS "/openmp ${CMAKE_CXX_FLAGS}")
+		add_definitions(-DUSE_OPENMP)
 	else()
 		# using GCC & Clang++ (android)
 		set(CMAKE_CXX_FLAGS "-fopenmp ${CMAKE_CXX_FLAGS}")
 		set(CMAKE_C_FLAGS "-fopenmp ${CMAKE_C_FLAGS}")
+		add_definitions(-DUSE_OPENMP)
 	endif()
 endif()
 
