--- a/Samples/Sponza/CMakeLists.txt
+++ b/Samples/Sponza/CMakeLists.txt
@@ -184,7 +184,10 @@ elseif (BUILD_MACOS)
 
 	target_link_libraries(SampleSponza ${LIBEGL} ${LIBGLESV2})
 	target_link_libraries(SampleSponza "-framework Cocoa")
-
+	if (OPENMP_FOUND)
+	target_link_libraries(SampleSponza PRIVATE OpenMP::OpenMP_CXX)
+	endif()
+	
 	message(STATUS "- Setup project: SampleSponza")
 	foreach(res_file ${resources_files})
 		file(RELATIVE_PATH res_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Bin" ${res_file})
