--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,6 +162,9 @@ if (USE_OPENMP)
 		# AppleClang
 		find_package(OpenMP REQUIRED)
 		if (OPENMP_FOUND)
+			set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+			set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+			
 			set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 			set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 			
