feat: #59 Add xatlas to project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,6 +270,8 @@ if (BUILD_IMGUI)
 subdirs (Projects/Imgui)
 endif()
 
+subdirs (Projects/XAtlas)
+
 #if (BUILD_BULLET_PHYSIC2_LIB)
 #subdirs (Projects/BulletPhysics2)
 #endif()
