--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,7 +96,9 @@ jobs:
         make -C PrjLinux
     - name: Unit Test
       run: |
+        cd PrjLinux
         ctest --verpose
+        cd ..
     - name: Package
       run: |
         mkdir Build
