Add UnitTest MacOS Build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,6 +129,11 @@ jobs:
         cd PrjMac
         xcodebuild -configuration Release
         cd ..
+    - name: Unit Test
+      run: |
+        cd PrjMac
+        ctest --verpose -C Release
+        cd ..
     - name: Package
       run: |
         brew install p7zip
