#88 Fix build error

--- a/Projects/Skylicht/Audio/CMakeLists.txt
+++ b/Projects/Skylicht/Audio/CMakeLists.txt
@@ -17,11 +17,11 @@ target_precompiled_header(Audio ./Source/stdafx.cpp ${skylicht_audio_source})
 set_target_properties(Audio PROPERTIES VERSION ${SKYLICHT_VERSION})
 
 if (BUILD_LINUX)
-	target_link_libraries(System OpenAL)
+	target_link_libraries(Audio OpenAL)
 elseif(BUILD_ANDROID)
-	target_link_libraries(System OpenSLES)
+	target_link_libraries(Audio OpenSLES)
 elseif(BUILD_MACOS)
-	target_link_libraries(System)
+	target_link_libraries(Audio)
 else()
-	target_link_libraries(System)
+	target_link_libraries(Audio)
 endif()
