--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ if (CMAKE_SYSTEM_NAME STREQUAL Darwin)
 	set(CMAKE_CXX_STANDARD 14)
 	set(CMAKE_OSX_ARCHITECTURES "x86_64")
 
-	# Angle API defined
+	# angle api defined
 	add_definitions(-DANGLE_USE_UTIL_LOADER)
 	add_definitions(-DGL_GLES_PROTOTYPES=0)
 	add_definitions(-DEGL_EGL_PROTOTYPES=0)
