#88 Add mp3 decoder

--- a/Projects/Skylicht/Audio/CMakeLists.txt
+++ b/Projects/Skylicht/Audio/CMakeLists.txt
@@ -1,13 +1,13 @@
 include_directories(	
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Audio/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/System/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/ThirdParty/source/libmpg123
 )
 
 file(GLOB_RECURSE skylicht_audio_source 
 	./Source/*.cpp 
 	./Source/*.hpp 
 	./Source/*.c
-	./Source/*.mm
 	./Source/*.h)
 setup_project_group("${skylicht_audio_source}" ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -19,22 +19,26 @@ set_target_properties(Audio PROPERTIES VERSION ${SKYLICHT_VERSION})
 
 if (BUILD_LINUX)
 	target_link_libraries(Audio 
-		System 
+		System
+		ThirdParty
 		openal
 	)
 elseif(BUILD_ANDROID)
 	target_link_libraries(Audio 
-		System 
+		System
+		ThirdParty
 		OpenSLES
 	)
 elseif(BUILD_MACOS)
 	target_link_libraries(Audio 
-		System 
+		System
+		ThirdParty
 		"-framework AudioUnit"
 		"-framework AVFoundation"
 	)
 else()
 	target_link_libraries(Audio 
 		System
+		ThirdParty
 	)
 endif()
