Add unitest on Spreadsheet/Test.xml

--- a/UnitTest/TestApp/CMakeLists.txt
+++ b/UnitTest/TestApp/CMakeLists.txt
@@ -90,3 +90,5 @@ if (BUILD_MACOS)
 else()
 	add_test(NAME TestApp COMMAND $<TARGET_FILE:TestApp>)
 endif()
+
+set_target_properties(TestApp PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
