#123 Enable ctest log on MacOS

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,6 +135,7 @@ jobs:
       run: |
         cd PrjMac
         ctest --verpose -C Release
+        cat Testing/Temporary/LastTest.log
         cd ..
     - name: Package
       run: |
