#125 Remove image present, install x11 library on CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update -y -qq
-        sudo apt-get install -y libglfw3-dev libopenal-dev
+        sudo apt-get install -y libglfw3-dev libopenal-dev libx11-dev
         sudo apt remove --purge --auto-remove cmake
         wget -q https://github.com/Kitware/CMake/releases/download/v3.15.5/cmake-3.15.5-Linux-x86_64.tar.gz
         tar -zxvf cmake-3.15.5-Linux-x86_64.tar.gz        
