#125 Update linux project for examples

--- a/Samples/Audio/CMakeLists.txt
+++ b/Samples/Audio/CMakeLists.txt
@@ -154,6 +154,11 @@ elseif(BUILD_SDL)
 		${application_source}
 		${template_path}/Platforms/SDL2/MainSDL.cpp
 	)
+elseif(BUILD_LINUX)
+	add_executable(SampleAudio
+		${application_source}
+		${template_path}/Platforms/Linux/MainLinux.cpp
+	)	
 elseif(BUILD_ANDROID)
 	add_library(SampleAudio SHARED ${application_source})
 elseif (BUILD_WINDOWS_STORE)
