--- a/Scripts/CMakeLists.txt
+++ b/Scripts/CMakeLists.txt
@@ -151,6 +151,11 @@ elseif(BUILD_SDL)
 		${application_source}
 		${template_path}/Platforms/SDL2/MainSDL.cpp
 	)
+elseif(BUILD_LINUX)
+	add_executable(@project_name@ 
+		${application_source}
+		${template_path}/Platforms/Linux/MainLinux.cpp
+	)
 elseif(BUILD_ANDROID)
 	add_library(@project_name@ SHARED ${application_source})
 elseif (BUILD_WINDOWS_STORE)
